add endpoints login and withdraw to /api/users
